<resources>
    <string name="app_name">Formuleitor</string>

    <!-- STRINGS DE PANTALLA DE INICIO -->
    <string name="app_start">Formuleitor 1.0</string>
    <string name="app_start_subtitle">by Drakjoakas (Joaquin Sandoval)</string>

    <!-- STRINGS DE PANTALLA PRINCIPAL -->
    <string name="instrucciones">Seleccione una fórmula y llene los valores.</string>

    <string-array name="formulas">
        <item>Velocidad Lineal</item>
        <item>Aceleración</item>
        <item>Fuerza</item>
    </string-array>

    <string name="boton">Calcular</string>

    <string name="image_content_description">Formula matemática</string>
    <string name="logo_content_description">Logo Formuleitor</string>

    <!-- HINTS FORMULARIO -->
    <string name="hint_distancia">Distancia en Metros [m]</string>
    <string name="hint_tiempo">Tiempo en segundos [s]</string>
    <string name="hint_masa">Masa en Kilogramos [kg]</string>
    <string name="hint_velocidad">Velocidad [m/s] </string>
    <string name="hint_aceleracion">Aceleración [m/s^2]</string>

    <!-- MENSAJES DE ERROR -->
    <string name="error_empty">Favor de llenar todos los campos.</string>
    <string name="error_numerator_cero">El numerador no puede ser cero</string>
    <string name="error_negative_distance">La distancia no puede ser negativa</string>
    <string name="error_negative_time">El tiempo no puede ser negativo</string>
    <string name="error_negative_velocity">La velocidad no puede ser negativa</string>
    <string name="error_negative_mass">La masa no puede ser negativa</string>

    <!-- PANTALLA RESULTADOS -->
    <string name="hint_result_msg">El resultado es</string>
    <string name="hint_result_res" translatable="false">42</string>
    <string name="hint_result_units" translatable="false">[m]</string>

    <string name="result_velocity_msg">La velocidad es de </string>
    <string name="result_velocity_units" translatable="false">[m/s]</string>

    <string name="result_acceleration_msg">La aceleración es de </string>
    <string name="result_acceleration_units" translatable="false">[m/s^2]</string>

    <string name="result_force_msg">La fuerza es de </string>
    <string name="result_force_units" translatable="false">[N]</string>

    <string name="result_format" translatable="false">%.2f</string>


</resources>